--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,32 +5,94 @@
 html, body, p, ul, li, input, button, a { margin: 0px; padding: 0px; border: 0px; }
 
 body {
-  background: imgage-url("skyline.jpg");
+  background: image-url("skyline.jpg");
   background-size: cover;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.test {
-  background-color: blue;
-}
-// 
-// .login-form {
-//   width: 200;
-//   margin: auto;
-// }
-//
-// .login-wrapper {
-//   height: 400px;
-//   width: 500px;
-//   background-color: #E3B8CB;
-// }
-
-.guest-login-wrapper {
-}
-
-.login-form-wrapper {
-}
-
-.login-page-wrapper {
+.centering-page-wrapper {
+  display: table;
+  position: absolute;
   height: 100%;
   width: 100%;
+}
+
+.centering-mid-box {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+
+
+.guest-login-box {
+  float:left;
+}
+
+.login-box {
+  margin:auto;
+  height: 400px;
+  width: 350px;
+  background-color: white;
+  border: 5px black solid;
+  border-radius: 30px;
+  z-index: 20;
+}
+
+.login-form {
+  width: 200px;
+}
+
+.login-form-input-field {
+  padding: 5px;
+  margin: 10px;
+  height: 40px;
+  width: 200px;
+  float:left;
+  border: 3px black solid;
+  text-align: center;
+  font-size: 20px;
+}
+
+.login-form-input-label {
+  padding: 20px
+}
+
+.login-spacer-box {
+  width: 60px;
+  float:left;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  line-height: 400px;
+  font-size: 40px;
+  color: white;
+}
+
+.login-form-submit-button {
+  border-radius: 10px;
+  background-color: #C478BB;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  width: 200px;
+  font-size: 20px;
+  margin: auto;
+}
+
+.login-box-wrapper {
+  height: 400px;
+  width: 820px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.user-login-box {
+  float:left;
+}
+
+.transparent-backing-box {
+  height: 410px;
+  background-color: #757575;
+  opacity: 0.5;
+  margin-top: -400px;
 }
