--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,6 +10,19 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.button {
+  border-right: 2px grey solid;
+  border-bottom: 2px grey solid;
+  border-radius: 10px;
+  background-color: #e6bec9;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  color: #7b7a7a;;
+  font-size: 20px;
+  margin: auto;
+}
+
 .centering-page-wrapper {
   display: table;
   position: absolute;
@@ -22,39 +35,84 @@ body {
   vertical-align: middle;
 }
 
-
+.foot-note {
+  color: #7b7a7a;;
+  font-size: 14px;
+  text-align: center;
+}
 
 .guest-login-box {
   float:left;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height:50px;
+  background-color: grey;
+  opacity: 0.5;
+  color: blue;
+
+}
+
+.highlighted-phrase {
+  color: #da6767;
+  font-size: 43px;
+  font-weight: bold;
+}
+
 .login-box {
-  margin:auto;
-  height: 400px;
-  width: 350px;
+  margin: auto;
+  height: 446px;
+  width: 400px;
   background-color: white;
-  border: 5px black solid;
-  border-radius: 30px;
-  z-index: 20;
+  border: 2px darkgrey solid;
+  border-radius: 50px;
+}
+
+.login-box-header {
+  font-size: 40px;
+  color: #7b7a7a;
+  width: 300px;
+  text-align: center;
+  padding: 20px;
+  margin: auto;
+}
+
+.login-box-wrapper {
+  height: 400px;
+  width: 920px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .login-form {
-  width: 200px;
+  width: 254px;
 }
 
 .login-form-input-field {
-  padding: 5px;
-  margin: 10px;
+  padding: 5px 0 5px 0;
+  margin-top: 20px;
   height: 40px;
-  width: 200px;
+  width: 250px;
   float:left;
-  border: 3px black solid;
+  border: 2px #7b7a7a solid;
   text-align: center;
   font-size: 20px;
 }
 
 .login-form-input-label {
   padding: 20px
+}
+
+.login-inputs-wrapper {
+  width: 254px;
+  height: 200px;
+  margin: auto;
+  position: relative;
+  top: 20%;
+  transform: translateY(-50%);
 }
 
 .login-spacer-box {
@@ -68,31 +126,33 @@ body {
   color: white;
 }
 
-.login-form-submit-button {
-  border-radius: 10px;
-  background-color: #C478BB;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-  width: 200px;
-  font-size: 20px;
-  margin: auto;
-}
-
-.login-box-wrapper {
-  height: 400px;
-  width: 820px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .user-login-box {
   float:left;
 }
 
+.sign-in-button {
+  width: 150px;
+  margin-top: 20px;
+}
+
+.sign-in-button-wrapper {
+  width: 150px;
+  margin: auto;
+}
+
 .transparent-backing-box {
-  height: 410px;
+  position: fixed;
+  top: 0;
+  height: 30px;
   background-color: #757575;
   opacity: 0.5;
-  margin-top: -400px;
+}
+
+.welcome-button {
+  width: 200px;
+}
+
+.welcome-button-wrapper {
+  width: 200px;
+  margin: auto;
 }
