--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the properties controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.map {
+  width: 500px;
+  height: 500px;
+  color: blue;
+}
+
+.property-list-item-attribute {
+  color: grey;
+}
