--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAVodfFIc_sIDjD6n4_gnwhSciv75BtNX0" %>
+   <%= stylesheet_link_tag    'application', media: 'all' %>
+   <%= csrf_meta_tags %>
+   <%= javascript_include_tag 'application' %>
+
   <title>Apartrue</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
 </head>
 <body>
 
