--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -17,6 +17,12 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.group {
+  content: "";
+  clear: both;
+  display: block;
+}
+
 .button {
   border-right: 2px grey solid;
   border-bottom: 2px grey solid;
@@ -130,12 +136,6 @@ body {
   padding: 20px
 }
 
-.logout-button {
-  height: 100px;
-  width: 100px;
-  background-color: blue;
-}
-
 .login-spacer-box {
   width: 60px;
   float:left;
@@ -149,11 +149,6 @@ body {
 
 .user-login-box {
   float:left;
-}
-
-.sign-in-button {
-  width: 150px;
-  margin-top: 20px;
 }
 
 .sign-in-navLink {
