--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -1,27 +1,47 @@
+.nav-bar-link:hover {
+  color: #E89595;
+}
+
+.nav-buttons {
+  display: block;
+  float:right;
+}
 
 .session-button {
   color: white;
-  position: fixed;
   top: 0;
   right: 0;
-  z-index: 1;
   display:block;
-  height: 30px;
+  height: 50px;
   width: 70px;
-  background-color: #575757;
+  float: left;
 }
 
-.session-button:hover {
-  color: black;
-  background-color: #B0B0B0;
+
+.nav-bar-background {
+  display: block;
+  width: 100%;
+  height: 50px;
+  background: #575757;
+  opacity: 0.5;
 }
 
 .nav-bar {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height:30px;
-  background-color: grey;
-  opacity: 0.5;
-  color: blue;
+  display: block;
+  top: -50px;
+  height: 50px;
+  min-width: 100px;
+  max-width: 900px;
+  margin: auto;
+  position: relative;
+}
+
+
+.home-button {
+  position: relative;
+  color: white;
+  font-size: 40px;
+  letter-spacing: 3px;
+  text-align: center;
+  text-decoration: none;
 }
