--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,18 +4,19 @@
 
 
 
-html, body, p, ul, li, input, button, a {
+html, body, p, ul, li, input, button, a, option, select{
+  -webkit-appearance:none;
+  color: inherit;
+  background-color: transparent;
   margin: 0px;
   padding: 0px;
   border: 0px;
+  outline: inherit;
+  text-decoration: inherit;
   list-style: none;
+  border-radius: 0;
 }
 
-body {
-  background: image-url("skyline.jpg");
-  background-size: cover;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
 
 .group {
   content: "";
@@ -23,151 +24,15 @@ body {
   display: block;
 }
 
-.button {
-  border-right: 2px grey solid;
-  border-bottom: 2px grey solid;
-  border-radius: 10px;
-  background-color: #e6bec9;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-  color: #7b7a7a;;
-  font-size: 20px;
-  margin: auto;
-  display: block;
+.app-wrapper {
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  min-width: 200px;
+  // max-width: 1000px;
 }
 
-.error-list-item {
-  top: -20px;
-  text-decoration-style: none;
-  color: red;
-  width: 300px;
-}
-
-.error-list-place-holder {
-  position: relative;
-  display: block;
-  margin: auto;
-  text-align: center;
-  min-height: 20px;
-}
-
-.foot-note {
-  color: #7b7a7a;;
-  font-size: 14px;
-  text-align: center;
-}
-
-.guest-login-box {
-  float:left;
-}
-
-.header {
-  position: fixed;
-  top: 0;
+.page-wrapper {
+  height: auto;
   width: 100%;
-  height:50px;
-  background-color: grey;
-  opacity: 0.5;
-  color: blue;
-}
-
-.highlighted-phrase {
-  color: #da6767;
-  font-size: 42px;
-  font-weight: bold;
-}
-
-.login-box {
-  margin: auto;
-  height: 446px;
-  width: 400px;
-  background-color: white;
-  border: 2px darkgrey solid;
-  border-radius: 50px;
-}
-
-.login-box-header {
-  font-size: 40px;
-  color: #7b7a7a;
-  width: 300px;
-  text-align: center;
-  padding-top: 20px;
-  margin: auto;
-}
-
-.login-box-wrapper {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  width: 920px;
-}
-
-@media(max-width:920px) {
-  .login-box-wrapper {
-    width: auto;
-    top: 50%;
-  }
-
-  .login-spacer-box {
-    height: 10px;
-  }
-}
-
-.login-form {
-  display: block;
-  width: 300px;
-  margin: auto;
-}
-
-.login-form-input-field {
-  display: block;
-  padding: 5px 0 5px 0;
-  height: 40px;
-  width: 250px;
-  border: 2px #7b7a7a solid;
-  text-align: center;
-  font-size: 20px;
-  margin: auto;
-}
-
-.login-form-input-label {
-  padding: 20px
-}
-
-.login-spacer-box {
-  width: 60px;
-  float:left;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  line-height: 400px;
-  font-size: 40px;
-  color: white;
-}
-
-.user-login-box {
-  float:left;
-}
-
-.sign-in-navLink {
-  padding-top: 15px;
-  display: block;
-  text-align: center;
-  color: grey;
-  margin: auto;
-  width: 100px;
-}
-
-.transparent-backing-box {
-  position: fixed;
-  top: 0;
-  height: 30px;
-  background-color: #757575;
-  opacity: 0.5;
-}
-
-.welcome-button {
-  width: 200px;
 }
