--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,7 +4,8 @@
 
 
 
-html, body, p, ul, li, input, button, a, option, select{
+html, body, p, ul, li, input, button, a, option, select,
+h1, h2, h3, {
   -webkit-appearance:none;
   color: inherit;
   background-color: transparent;
