Precompile and http

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAVodfFIc_sIDjD6n4_gnwhSciv75BtNX0&libraries=places" %>
+  <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyAVodfFIc_sIDjD6n4_gnwhSciv75BtNX0&libraries=places" %>
    <%= stylesheet_link_tag    'application', media: 'all' %>
    <%= csrf_meta_tags %>
    <%= javascript_include_tag 'application' %>
