--- a/app/assets/stylesheets/search_form.scss
+++ b/app/assets/stylesheets/search_form.scss
@@ -67,7 +67,7 @@
 .search-button {
   display: block;
   padding: 10px 50px;
-  background: #d7eae0;
+  background: #e1e6e3;
   margin-top: 30px
 }
 
