Fix property view and add review form

--- a/app/assets/stylesheets/show_property.scss
+++ b/app/assets/stylesheets/show_property.scss
@@ -6,3 +6,16 @@
   // border-right: 1px solid #7a7b7b;
   margin: auto;
 }
+
+.single-prop-map {
+  height: 300px;
+  width: 300px;
+  float: right;
+  margin:5px;
+  border: 2px solid #7a7b7b;
+}
+
+.review-wrapper {
+  height: 200px;
+  border-top: 1px solid grey;
+}
