Add file upload to property form

--- a/app/assets/stylesheets/property_form.scss
+++ b/app/assets/stylesheets/property_form.scss
@@ -13,3 +13,10 @@
   border: 2px black solid;
   margin: 5px;
 }
+
+.property-form-component-wrapper > h1 {
+  color: white;
+  max-width: 800px;
+  text-align: center;
+  margin:auto;
+}
