--- a/app/assets/stylesheets/show_property.scss
+++ b/app/assets/stylesheets/show_property.scss
@@ -7,6 +7,14 @@
   margin: auto;
 }
 
+.address-details {
+  display: block;
+  float: left;
+  color: #7a7e7e;
+  padding: 10px;
+  
+}
+
 .single-prop-map {
   height: 300px;
   width: 300px;
