--- a/app/assets/stylesheets/show_property.scss
+++ b/app/assets/stylesheets/show_property.scss
@@ -5,14 +5,12 @@
   // display: block;
 }
 
-.show-property-wrapper {
-  max-width: 1000px;
-  background: white;
-  height: 100%;
-  // border-left: 1px solid #7a7b7b;
-  // border-right: 1px solid #7a7b7b;
-  margin: auto;
-}
+// .show-property-wrapper {
+//   max-width: 1000px;
+//   background: white;
+//   height: 100%;
+//   margin: auto;
+// }
 
 .title-address {
   font-size: 50px;
