--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,7 +5,7 @@
 
 
 html, body, p, ul, li, input, button, a, option, select,
-h1, h2, h3, {
+h1, h2, h3, label{
   -webkit-appearance:none;
   color: inherit;
   background-color: transparent;
@@ -34,6 +34,41 @@ h1, h2, h3, {
 }
 
 .page-wrapper {
-  height: auto;
+  height: 900px;
   width: 100%;
+}
+
+.content-wrapper {
+  max-width: 1000px;
+  background: white;
+  min-height: 900px;
+  margin: auto;
+}
+
+.footer {
+  bottom:0px;
+  color: white;
+  text-align: right;
+  font-size: 16px;
+  padding: 20px 0;
+  display: block;
+  width: 100%;
+  // height: 50px;
+  background: #575757;
+  opacity: 0.5;
+}
+
+.form-background {
+  height: 500px;
+  width: 700px;
+  border-radius: 20%;
+  position: relative;
+  margin: auto;
+  transform: translateY(25%);
+  background: #e1a0a0;
+  opacity: 0.95;
+}
+
+.no-background {
+  background: none;
 }
