Finish styling search results

--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -40,6 +40,14 @@ body {
   text-align: center;
 }
 
+.guest-login-content-wrapper {
+    margin-top: 40px;
+}
+
+.login-content-wrapper {
+    margin-top: 30px;
+}
+
 .guest-login-box {
   float:left;
 }
