Debugg property form

--- a/app/assets/stylesheets/search_results.scss
+++ b/app/assets/stylesheets/search_results.scss
@@ -9,7 +9,7 @@
   font-size: 2.5em;
   color: #f4bf00;
   width: 201px;
-  margin: 20px 0 0 26px;
+  // margin: 20px 0 0 26px;
 }
 
 .list-item-content {
