--- a/app/assets/stylesheets/property_form.scss
+++ b/app/assets/stylesheets/property_form.scss
@@ -1,11 +1,11 @@
 .bedroom-dropdown {
   box-sizing: border-box;
       display: block;
-      padding: 5px 10px 5px 10px;
+      padding: 5px 10px 5px 50px;
       height: 45px;
       width: 200px;
       border: 2px #7b7a7a solid;
-      text-align: center;
+      // text-align: center;
       font-size: 20px;
       background: white;
       color: #a6a6a6;
