--- a/app/assets/stylesheets/show_property.scss
+++ b/app/assets/stylesheets/show_property.scss
@@ -12,6 +12,19 @@
   color: white;
 }
 
+#modal-sign-in-button {
+  border-right: 2px grey solid;
+  border-bottom: 2px grey solid;
+  border-radius: 10px;
+  background-color: #e6bec9;
+  padding: 10px 50px;
+  text-align: center;
+  color: black;;
+  font-size: 20px;
+  margin: 10px auto;
+  display: block;
+}
+
 .delete-button-place-holder {
   height: 30px;
   width: 100px;
@@ -77,6 +90,15 @@ li.single-review-star-wrapper {
   opacity: .5;
   transform: translate(-500px, -261px);
   }
+
+.guest-login-modal {
+  font-size: 30px;
+    color: white;
+    width: 500px;
+    text-align: center;
+    margin: auto;
+    margin-top: 100px;
+}
 
 .map-box {
   z-index: 200;
