--- a/app/assets/stylesheets/property_form.scss
+++ b/app/assets/stylesheets/property_form.scss
@@ -5,10 +5,10 @@
       height: 45px;
       width: 200px;
       border: 2px #7b7a7a solid;
-      // text-align: center;
+      text-align: center;
       font-size: 20px;
       background: white;
-      color: #a6a6a6;
+      color: black;
       margin: auto;
 }
 
