--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,7 +5,7 @@
 
 
 html, body, p, ul, li, input, button, a, option, select,
-h1, h2, h3, label{
+h1, h2, h3, label, option{
   -webkit-appearance:none;
   color: inherit;
   background-color: transparent;
