--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -9,11 +9,11 @@ body {
 .button {
   border-right: 2px grey solid;
   border-bottom: 2px grey solid;
-  border-radius: 10px;
-  background-color: #e6bec9;
+  /* border-radius: 10px; */
+  background-color: #8ee0e0;
   padding: 10px 50px;
   text-align: center;
-  color: #7b7a7a;;
+  color: #444343;
   font-size: 20px;
   margin: 10px auto;
   display: block;
