--- a/app/assets/stylesheets/property_form.scss
+++ b/app/assets/stylesheets/property_form.scss
@@ -147,3 +147,16 @@
 .submit-form-button:hover {
   background-color: grey;
 }
+
+.login-to-review {
+  border-right: 2px grey solid;
+border-bottom: 2px grey solid;
+/* border-radius: 10px; */
+background-color: #8ee0e0;
+padding: 10px 50px;
+text-align: center;
+color: #444343;
+font-size: 20px;
+margin: 10px auto;
+display: block;
+}
