fix comment backgrounds

--- a/app/assets/stylesheets/show_property.scss
+++ b/app/assets/stylesheets/show_property.scss
@@ -46,6 +46,7 @@
   width: 1000px;
   min-height: 800px;
   border-top: 50px solid grey;
+  background: white;
   position: absolute;;
   transform: translateY(89px);
 }
