--- a/app/assets/stylesheets/show_property.scss
+++ b/app/assets/stylesheets/show_property.scss
@@ -106,7 +106,7 @@ li.single-review-star-wrapper {
   left: 50px;
   // top: 10px;
   font-size: 20px;
-  border: 3px solid #515252;
+  border: 2px solid #515252;
   transform: translateY(-20px);
 }
 
@@ -143,7 +143,7 @@ li.single-review-star-wrapper {
   width: 1000px;
   padding-bottom: 200px;
   background: white;
-  border-top: 1px solid grey;
+  border-top: 2px solid #e6e6e6;
 }
 
 p.review-body {
@@ -152,7 +152,7 @@ p.review-body {
   float: left;
   margin: 0 20px;
   padding: 20px;
-  background: #e4e4e4;
+  background: #f1f0f0;
 }
 
 h1.review-title {
