Working links embeded in title and username in reviews

--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -100,3 +100,13 @@ background: white;
   border: 2px solid grey;
   font-size: 16px;
 }
+
+a.user-name {
+  font-size: 18px;
+  line-height: 35px;
+  color: #64aaaa;
+  display: block;
+  float: left;
+  margin-left: 10px;
+  padding: 10px 0 0 10px;
+}
