--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -1,6 +1,5 @@
 
 body {
-  background: image-url("skyline.jpg");
   background-size: cover;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -15,7 +14,7 @@ body {
   text-align: center;
   color: #444343;
   font-size: 20px;
-  margin: 10px auto;
+  margin: auto;
   display: block;
 }
 
