--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,8 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-
 html, body, p, ul, li, input, button, a, option, select,
 h1, h2, h3, h4,label, option, div {
   -webkit-appearance:none;
@@ -20,10 +18,17 @@ h1, h2, h3, h4,label, option, div {
 
 body {
   background: #2d2d2d;
+  background-image: image-url('pool.jpg');
+  background-color: grey;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  position: relative;
+  background-attachment: fixed;
 }
 
 .button:hover {
   background-color: #7a7b7b;
+  cursor: pointer;
 }
 
 .group:after {
@@ -34,21 +39,20 @@ body {
 
 .content-wrapper {
   max-width: 1000px;
-  // min-height: 900px;
   margin: auto;
 }
 
-.footer {
-  bottom:0px;
-  color: white;
-  text-align: right;
-  font-size: 16px;
-  padding: 20px 0;
-  display: block;
-  width: 100%;
-  background: #575757;
-  opacity: 0.5;
-}
+// .footer {
+//   bottom:0px;
+//   color: white;
+//   text-align: right;
+//   font-size: 16px;
+//   padding: 20px 0;
+//   display: block;
+//   width: 100%;
+//   background: #575757;
+//   opacity: 0.5;
+// }
 
 .page-break {
   position: absolute;
@@ -58,13 +62,8 @@ body {
   z-index: -1;
 }
 
-body {
-  background-image: image-url('pool.jpg');
-  background-color: grey;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  position: relative;
-  background-attachment: fixed;
+.page-wrapper {
+  padding-top: 50px;
 }
 
 .search-page-image-overlay {
@@ -76,4 +75,24 @@ body {
 
 .submit-button {
   margin: 10px auto;
+}
+
+.header {
+  color: white;
+  text-align: center;
+  font-size: 50px;
+  height: 236px;
+  position: relative;
+  z-index: 10;
+  width: 930px;
+  margin: auto;
+  text-align: center;
+}
+
+.property-header {
+  height: 130px;
+}
+
+.welcome {
+  line-height: 11.5;
 }
