Debuggin search update

--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -11,7 +11,7 @@ body {
   background-color: #64aaaa;
   padding: 10px 50px;
   text-align: center;
-  color: white;
+  color: white !important;
   font-size: 20px;
   margin: auto;
   display: block;
