Refactor satisfy_params method of properties

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 
+<link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/ >
   <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyAVodfFIc_sIDjD6n4_gnwhSciv75BtNX0&libraries=places" %>
    <%= stylesheet_link_tag    'application', media: 'all' %>
    <%= csrf_meta_tags %>
