Add review uniquness error feild

--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -1,8 +1,9 @@
 .errorMessage-placeholder {
   height: 20px;
-  width: 200px;
+  width: 700px;
+  text-align: center;
   color: red;
-  margin: 5px 0 0 244px;
+  margin: 5px 100px 0 0;
 }
 
 .landlord-rating {
